=================== Release 1.0 2017-04-15 =====================
Description
    * First version of the App.
Functionalities
    * 
Changes
    * Version 1.0 Build 01 (2017/04/15)
        * Corrected bug where tasks were not being migrated if added from the bucket list. (2017/04/04)
        * Added support for a spinner in controllers. (2017/04/04)
        * Corrected bug where notifications were not being re-scheduled when modifying times. Also corrected a minor bug with the computation of SR. (2017/04/04)
        * Added support to change a project's name. (2017/04/03)
        * Corrected bug where tasks were not migrated if added without doing previous sanity checks. (2017/04/03)
        * Added support for modifying the username. (2017/04/03)
        * Added support for modifying project's times. (2017/04/03)
        * Added support for BSB in backups. (2017/04/03)
        * Added support for Swift 3.1 and Xcode 8.3. (2017/04/03)
        * Corrected another bug in the BrainstormingBucket function. (2017/04/01)
        * Corrected minor bug with the BrainstormingBucket function and added missing support to delete the bucket entry after migration. (2017/04/01)
        * Added final support for the BrainstormingBucket function. (2017/04/01)
        * Added support for the BrainstormingBucket function. (2017/03/31)
        * Disabled user interaction with the charts. (2017/03/30)
        * Added support for a chart displaying days SR grouped by week day. (2017/03/30)
        * Added necessary files and pods for charts. (2017/03/29)
        * Minor modification to include parcial percentages from tasks into SR for the day. (2017/03/23)
        * Added one new configuration option for showing local notification's messages. (2017/03/23)
        * Added GoodiesView. (2017/03/23)
        * Corrected minor bug with the BackupView. (2017/03/23)
        * Added support for limited editing on a new task. (2017/03/23)